Wrap fix

--- a/Simple Quote Generator/style.css
+++ b/Simple Quote Generator/style.css
@@ -42,6 +42,7 @@ body{
 .textarea{
     width: 70vw;
     font-size: 1.125rem;
+    word-wrap: break-word;
 }
 
 .person{
@@ -59,7 +60,7 @@ body{
     transition-timing-function: ease;
     transition-delay: 0s;
     transition-duration: 1s;
-    width: 70vw;
+    width: 75vw;
 }
 
 button{
